deploy/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: httpredirect
spec:
  redirectScheme:
    scheme: https
