deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wharf-demo
  labels:
    app: wharf-demo
spec:
  type: ClusterIP
  selector:
    app: wharf-demo
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
